responsive finished and mozilla overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -11,24 +11,22 @@
 body{
     background-color: #000;
     margin: 0;
+    overflow: hidden;
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
+::-webkit-scrollbar {display: none;}
+::-webkit-scrollbar-button {display: none;}
+::-moz-scrollbar {display: none;}
+::-moz-scrollbar-button {display: none;}
 
-::-webkit-scrollbar-button {
-  display: none;
-}
 body {
   -ms-overflow-style:none;
 }
 #container{
-    float: left;
     background-color: #000;
     color: #AAA;
     width: 50%;
-    height: 48%;
+    height: 47.5%;
     margin: auto;
     position: fixed;
     overflow-y: scroll;
@@ -68,6 +66,7 @@ body {
     border-top: 0;
     border: 4px dashed #AAA;
     padding: 10px;
+    background-color: #000;
 }
 
 .text{
@@ -125,14 +124,12 @@ input#input{
 
 #statistics-button{
     position: fixed;
+    top: 15px;
     text-align: center;
     background-color: #000080;
     color: #FFF;
-    float: left;
-    margin-left: 15px;
-    margin-top: 5px;
     padding: 10px;
-    cursor: default;
+    cursor: pointer;
 }
 
 
@@ -164,4 +161,81 @@ input#input{
 
 #general, #your_answers{
     margin-bottom: 30px;
+}
+
+
+@media(max-width: 991px){
+    #container{
+        top: 0;
+        left: 0;
+        height: 60%;
+        width: calc(100% - 3px); /* Moz Hide */
+        border: 0;
+    }
+    #container2{
+        top: auto;
+        bottom: 40px;
+        left: 0;
+        height: calc(40% - 88px);
+        width: calc(100% - 20px);
+        border: 0;
+        border-top: 4px dashed #AAA;
+        border-bottom: 4px dashed #AAA;
+    }
+    .line.input-line{
+        height: 20px;
+        left: 0;
+        bottom: 0;
+        width: calc(100% - 20px);
+        border: 0;
+    }
+}
+@-moz-document url-prefix() { /*mozilla için*/
+    #container-out{
+        background-color: #000;
+        color: #AAA;
+        width: calc(50% + 20px);
+        height: calc(47.5% + 21px);
+        margin: auto;
+        position: fixed;
+        top: 10%;
+        left: 25%;
+        border: 4px dashed #AAA;
+    overflow: hidden;
+    }
+    #container{
+        background-color: #000;
+        color: #AAA;
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        position: relative;
+        padding: 10px;
+        top: auto;
+        left: auto;
+        border: 0;
+        overflow-y: scroll;
+        padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    }
+    @media(max-width: 991px){
+        #container{
+            height: calc(100% - 25px);
+        }
+        #container-out{
+            top: 0;
+            left: 0;
+            height: calc(60% + 20px);
+            width: calc(100% - 1px); /* Moz Hide */
+            border: 0;
+        }
+    }
+    @media(min-width: 991px){
+        #container-out{
+            height: calc(50% - 4px);
+            width: calc(50% + 20px); /* Moz Hide */
+        }
+    }
+    #container{
+        height: calc(100% - 25px);
+    }
 }
